# okularplugin

./: CMakeLists.txt  README  okularplugin_okularui.rc  okularpluginui.rc  partwin.cpp  partwin.h  progresswidget.cpp  progresswidget.h  progresswidget.ui
packaging/gentoo/www-plugins/okularplugin/: Manifest  okularplugin-1.0.0.ebuild  okularplugin-1.0.1.ebuild  okularplugin-9999.ebuild
qtbrowserplugin/: qtbrowserplugin.cpp  qtbrowserplugin.h  qtbrowserplugin_p.h  qtbrowserplugin_x11.cpp
